Day-1 Responsive Header

--- a/Day-1/Header/assets/styles/header.css
+++ b/Day-1/Header/assets/styles/header.css
@@ -16,10 +16,14 @@ img {
 
 a,
 button {
-  text-decoration: none;
   color: #414141;
   cursor: pointer;
   display: block;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 12px;
 }
 
 .container {
