--- a/Day-9/FAQ-Page/assets/styles/faq-section.css
+++ b/Day-9/FAQ-Page/assets/styles/faq-section.css
@@ -10,6 +10,9 @@ body {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   outline: none;
   background-color: rgba(65, 65, 65, 0.1);
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 /* default */
 a {
@@ -28,9 +31,10 @@ section {
 .container {
   width: 100%;
   height: 100vh;
-  min-width: 1440px;
+  max-width: 1440px;
   align-items: center;
   margin: 0 auto;
+  padding-top: 30px;
   padding-inline: 18px;
 }
 .d-flex {
@@ -57,7 +61,7 @@ section {
   height: max-content;
   margin: 0 auto;
   justify-content: space-between;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -66,6 +70,7 @@ section {
 .l-faq-wrap,
 .r-faq-wrap {
   width: 50%;
+  min-width: 390px;
   padding: 30px;
 }
 
@@ -164,4 +169,54 @@ section {
 }
 .r-faq-body {
   font-size: 18px;
+}
+
+@media (max-width: 990px) {
+  /* quick */
+  .container {
+    width: 100%;
+    height: auto;
+  }
+  /* FAQ section */
+  /* faq-main-wrap */
+  .faq-wrap {
+    width: 100%;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 940px) {
+  /* quick */
+  .container {
+    height: auto;
+  }
+  /* FAQ section */
+  /* faq-main-wrap */
+  .faq-wrap {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  /* faq left body */
+  .l-faq-content span {
+    padding: 14px;
+    font-size: 14px;
+  }
+  .l-faq-content h1 {
+    font-size: 36px;
+  }
+  .l-faq-content p {
+    font-size: 14px;
+  }
+  .l-faq-content a {
+    width: max-content;
+    text-align: center;
+    padding: 14px 28px;
+    font-size: 14px;
+    color: white;
+    background-color: black;
+    font-weight: 600;
+    letter-spacing: 1px;
+  }
+  /* right body text-size pending */
 }
