--- a/Day-9/FAQ-Page/assets/styles/faq-section.css
+++ b/Day-9/FAQ-Page/assets/styles/faq-section.css
@@ -32,6 +32,7 @@ section {
   width: 100%;
   height: 100vh;
   max-width: 1440px;
+  min-width: 425px;
   align-items: center;
   margin: 0 auto;
   padding-top: 30px;
@@ -168,7 +169,7 @@ section {
   font-size: 18px;
 }
 .r-faq-body {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 @media (max-width: 990px) {
