--- a/Day-9/FAQ-Page/assets/styles/faq-section.css
+++ b/Day-9/FAQ-Page/assets/styles/faq-section.css
@@ -23,9 +23,6 @@ img {
   width: 100%;
   display: block;
 }
-section {
-  height: 100vh;
-}
 
 /* quick */
 .container {
@@ -35,7 +32,7 @@ section {
   min-width: 425px;
   align-items: center;
   margin: 0 auto;
-  padding-top: 30px;
+  padding: 30px 0;
   padding-inline: 18px;
 }
 .d-flex {
@@ -182,6 +179,7 @@ summary::marker {
   font-size: 16px;
 }
 
+/* MEDIA */
 @media (max-width: 990px) {
   /* quick */
   .container {
