--- a/Day-12/Design-Services/assets/styles/design-services.css
+++ b/Day-12/Design-Services/assets/styles/design-services.css
@@ -60,10 +60,8 @@ ul {
   width: 100%;
 }
 .container {
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
-  justify-content: center;
-  align-items: center;
 }
 
 /* Design Services */
@@ -85,6 +83,15 @@ ul {
   font-size: 18px;
   margin-top: 30px;
 }
+@media (max-width: 590px) {
+  .design-title h1 {
+    font-weight: 600;
+    font-size: 80px;
+  }
+  .design-title p {
+    font-size: 28px;
+  }
+}
 /* columns */
 .design-content {
   margin-top: 140px;
@@ -92,9 +99,22 @@ ul {
 }
 .design-columns {
   justify-content: center;
+  align-items: center;
   min-width: 951px;
   width: 951px;
   margin: 0 auto;
+  padding-inline: 40px;
+}
+
+@media (max-width: 590px) {
+  .design-columns {
+    justify-content: center;
+    flex-direction: column;
+    min-width: 951px;
+    width: 951px;
+    margin: 0 auto;
+    padding-inline: 40px;
+  }
 }
 .bg-light {
   background-color: var(--bg-light);
@@ -123,11 +143,25 @@ ul {
   margin: 15px;
   gap: 30px;
 }
+
+@media (max-width: 590px) {
+  .design-c1,
+  .design-c2,
+  .design-c3 {
+    margin-bottom: 38px;
+    gap: 48px;
+  }
+}
 .design-card {
   height: auto;
   width: 100%;
   padding: 40px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+@media (max-width: 590px) {
+  .design-card {
+    padding: 60px;
+  }
 }
 /* column 2 */
 .design-img {
@@ -139,6 +173,7 @@ ul {
   width: 100%;
   object-fit: cover;
   transition: all 0.4s ease;
+  gap: 20px;
 }
 .design-img:hover {
   transform: scale(1.1);
@@ -148,7 +183,12 @@ ul {
   transform: scale(1.1);
 }
 .img-1 {
-  margin-top: -85px;
+  margin-top: 22px;
+}
+@media (max-width: 590px) {
+  .img-1 {
+    margin-top: 0px;
+  }
 }
 /* column 1-3 */
 .design-card a {
@@ -170,11 +210,26 @@ a {
   text-align: center;
   font-size: 18px;
 }
+@media (max-width: 590px) {
+  .design-card h2,
+  p,
+  a {
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 28px;
+  }
+}
 .design-card h2 {
   font-size: 30px;
   font-weight: 600;
   white-space: nowrap;
   letter-spacing: 0.5px;
+}
+@media (max-width: 590px) {
+  .design-card h2 {
+    font-size: 48px;
+  }
 }
 .design-card p {
   letter-spacing: 0.5px;
@@ -193,6 +248,12 @@ a {
   padding: 18px 48px;
   border-radius: 40px;
   transition: all 0.4s ease;
+}
+@media (max-width: 590px) {
+  .btn-booknow-wrap a {
+    padding: 18px 68px;
+    font-size: 30px;
+  }
 }
 .btn-booknow-wrap a:hover {
   background-color: var(--bg-dark);
