Day-12 Design-Service Section - [HTML-CSS]

--- a/Day-12/Design-Services/assets/styles/design-services.css
+++ b/Day-12/Design-Services/assets/styles/design-services.css
@@ -196,12 +196,26 @@ ul {
   margin-inline: auto;
   padding: 8px 1px;
   transition: all 0.3s ease;
-  border-bottom: 1px solid rgb(214, 74, 80);
+  border-width: 0;
+  transition: all 0.3s ease;
+  position: relative;
 }
-.bg-light a:hover,
-.bg-dark a:hover {
-  border-bottom: 1px solid var(--bg-secondary);
+.design-card a::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: " ";
+  width: 0%;
+  height: 2px;
+  background-color: rgb(214, 74, 80);
+  /* transform: scaleX(0); */
+  transition: all 0.4s ease;
 }
+.design-card a:hover::after {
+  width: 100%;
+  /* transform: scaleX(1); */
+}
+
 .design-card h2,
 p,
 a {
